test/libsolidity/syntaxTests/parsing/import_simple.sol
import "hello";
// ----
// ParserError: (0-15): Source "hello" not found: File not supplied initially.
